Add purchase to unlock tournaments
