# idle-backend/openapi/openapi.json
@@ -174,6 +174,7 @@
                   "collect_idle_percent",
                   "collect_real_percent",
                   "double_gems_daily_reward",
+                  "free_time_gem",
                   "free_real_time_hours",
                   "free_idle_time_hours"
                 ]
@@ -793,6 +794,7 @@
               "collect_idle_percent",
               "collect_real_percent",
               "double_gems_daily_reward",
+              "free_time_gem",
               "free_real_time_hours",
               "free_idle_time_hours"
             ]
@@ -1019,7 +1021,14 @@
             "$ref": "#/components/schemas/AccountResponse"
           },
           "tournament": {
-            "$ref": "#/components/schemas/TournamentCurrentResponse"
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/TournamentCurrentResponse"
+              },
+              {
+                "nullable": true
+              }
+            ]
           }
         },
         "required": [
@@ -1760,6 +1769,16 @@
                 }
               }
             }
+          },
+          "403": {
+            "description": "Weekly tournament shop upgrade required",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
           }
         }
       }
@@ -1791,6 +1810,16 @@
           },
           "401": {
             "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Weekly tournament shop upgrade required",
             "content": {
               "application/json": {
                 "schema": {
